figures! text! oh my!

--- a/extracted.bib
+++ b/extracted.bib
@@ -593,6 +593,53 @@
   eid =           {40},
 }
 
+@article{Dayou2006a,
+  author =        {{Dayou}, F. and {Balan{\c c}a}, C.},
+  journal =       {\aap},
+  month =         nov,
+  pages =         {297-305},
+  title =         {{Rotational excitation of SiO by collisions with
+                   helium}},
+  volume =        {459},
+  year =          {2006},
+  abstract =      {Context: .Within shocked regions of the interstellar
+                   medium and circumstellar environment of AGB stars the
+                   proper modelling of SiO line emission through non-LTE
+                   radiative transfer calculations requires accurate
+                   values of collisional rate coefficients. Aims: .The
+                   present study focuses on the transitions among the
+                   rotational levels of the SiO molecule in its ground
+                   vibrational state induced by collision with He. The
+                   H2 molecule being the main colliding partner for the
+                   astrophysical regions of interest, the collisional
+                   process between SiO and para-H2(j=0) is also
+                   investigated in an approximated way. Methods: .A new
+                   2D SiO-He potential energy surface is computed by
+                   means of highly correlated ab initio calculations.
+                   Collisional rate coefficients corresponding to the
+                   pure rotational (de)excitation of SiO by collision
+                   with He are obtained from close-coupling quantum
+                   scattering calculations of inelastic cross sections.
+                   The SiO-He potential energy surface is also employed
+                   to compute rate coefficients for the rotational
+                   (de)excitation of SiO by collision with para-H2(j=0).
+                   Results: .Rate coefficients for rotational levels up
+                   to j=26 and kinetic temperatures in the range 10-300
+                   K are obtained for the SiO-He colliding system. The
+                   large asymmetry of the SiO-He potential energy
+                   surface induces a propensity rule that favours odd
+                   Delta j transitions over even Delta j. The estimated
+                   values of the SiO-para-H2(j=0) rate coefficients are
+                   compared with those of Turner et al. (1992) for the
+                   twenty first rotational levels. As a result of
+                   significant differences between the SiO-He
+                   interaction potentials employed in the two studies,
+                   the rate coefficients are found to differ by a factor
+                   2.5-5 for the main rotational transitions, whatever
+                   the temperature range.},
+  doi =           {10.1051/0004-6361:20065718},
+}
+
 @article{Testi2010a,
   author =        {{Testi}, L. and {Tan}, J.~C. and {Palla}, F.},
   journal =       {\aap},
