--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -44,12 +44,13 @@ transitions for each molecular species and isotopologue with levels up to
 $E_U\sim5\ee{4}$ K.  Prior to
 this work, no astronomical detections of vibrationally excited transitions of
 any of these species have been reported \citep[e.g., see the review
-by][]{McGuire2018a}. \bam{Did we check w/ Holger here to see where he thought
-the v=1 for NaCl was seen?  I still can't find a paper w/ it.  It's also
-probably not correct to cite my paper here - I haven't (yet) compiled
-vibrational information...} \ag{I haven't e-mailed him; you want to do that?
-I was just citing your paper since the information came from your brain...
-we ought to cite you somewhere, if not here}
+by][]{McGuire2018a}.
+% \bam{Did we check w/ Holger here to see where he thought
+% the v=1 for NaCl was seen?  I still can't find a paper w/ it.  It's also
+% probably not correct to cite my paper here - I haven't (yet) compiled
+% vibrational information...} \ag{I haven't e-mailed him; you want to do that?
+% I was just citing your paper since the information came from your brain...
+% we ought to cite you somewhere, if not here}
 
 Disks around forming high-mass stars have been resolved only a handful of
 times.  The disk around Orion Source I (\sourcei) has frequently been observed
@@ -58,10 +59,11 @@ detected trace either an outflow (e.g., SiO) or some combination of the outflow
 and the disk (e.g., \water).  In HH80/81, a $\sim4$ \msun disk around a
 $\sim10-20$ \msun star, several lines of SO$_2$ are associated with the disk
 \citep{Girart2017a}.  Beyond these two sources, only disordered structures or
-disk-envelope blends have been observed. \bam{In HH80/81, or do you mean beyond
-this pair only disordered blends have been observed period, anywhere?}
-\ag{AFAIK, except for the HH80/81 and \sourcei disks, all disks around massive
-stars are ambiguous / not strictly disks.}
+disk-envelope blends have been observed.
+% \bam{In HH80/81, or do you mean beyond
+% this pair only disordered blends have been observed period, anywhere?}
+% \ag{AFAIK, except for the HH80/81 and \sourcei disks, all disks around massive
+% stars are ambiguous / not strictly disks.}
 
 In \citet[][the brine paper]{Ginsburg2018b}, we used lines of \water and one or
 more unknown species to measure the rotation curve of the disk around \sourcei.
@@ -91,7 +93,9 @@ emission associated with the outflow.
 We have clearly identified the carrier of the majority of unidentified lines in
 the \citet{Ginsburg2018b} spectra (only 2-3 lines are unidentified in the B6/B7
 spectra, though there are several in B3 we have not identified). \bam{Can you
-pass those along?  Might be worth taking another look just in case.}  The
+pass those along?  Might be worth taking another look just in case.} \ag{I haven't measured these yet,
+but I have started looking at other states of SiO, SiS as possibilities.  Only 1 line appears to be from SiS.
+We should keep investigating, there is interesting physics in this chemistry (different layers of the outflow?).} The
 detected lines have amplitudes in the range 0.5-3 mJy \perbeam, corresponding
 to brightness temperatures 5-20 K.
 
