new intro paragraph

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -22,6 +22,17 @@
 \end{abstract}
 
 \section{Introduction}
+The disk around Orion Source I (\sourcei) has been the subject of intense
+study, as it is the closest disk around a `high-mass' ($M>8$ \msun) star
+\citep{Hirota2014a,Plambeck2016a,Ginsburg2018b}.  It is also in many ways
+a unique source, being the only known protostellar object with SiO and \water
+masers in an outflow \citep{Goddi2009a,Goddi2010a,Greenhill2013a}.
+In \citet{Ginsburg2018b}, we found several emission lines that kinematically
+trace the disk and showed a Keplerian line profile that allowed us to measure
+the interior mass.  However, we were not able to identify the molecular
+species associated with these lines.  We now identify them as NaCl and KCl
+and their isotopologues.
+
 Molecules consisting of alkali metals and halogens have only rarely been
 detected in space.  Because of their rarity, their use as a diagnostic
 tool to measure metallicity and local physical conditions has been limited.
@@ -53,7 +64,7 @@ by][]{McGuire2018a}.
 % we ought to cite you somewhere, if not here}
 
 Disks around forming high-mass stars have been resolved only a handful of
-times.  The disk around Orion Source I (\sourcei) has frequently been observed
+times.  The disk around \sourcei has frequently been observed
 \citep{Hirota2014a,Plambeck2016a,Ginsburg2018b}, but most molecular species
 detected trace either an outflow (e.g., SiO) or some combination of the outflow
 and the disk (e.g., \water).  In HH80/81, a $\sim4$ \msun disk around a
